vlib/v/checker/tests/fn_init_sig.vv
fn init(i int) {
}
fn init() int {
    return 1
}
